@@ -1,3 +1,12 @@
+Wed Nov 27 15:05:59 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_stat): add new information heap_eden_page_length and
+	  heap_tomb_page_length.
+
+	* test/ruby/test_gc.rb: fix to use GC.stat[:heap_eden_page_length]
+	  instead of GC.stat[:heap_length].
+	  This test expects `heap_eden_page_length' (used pages size).
+
 Wed Nov 27 15:02:53 2013  Aman Gupta <ruby@tmm1.net>
 
 	* test/ruby/test_eval.rb (class TestEval): Use assert_same instead of
